// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options Reducer should have a default state 1`] = `
Object {
  "bedrockIdentifier": "crafting:recipe",
  "emptySpace": true,
  "minecraftVersion": 1.16,
  "outputRecipe": "crafting_recipe",
  "shape": "shaped",
  "tab": "crafting",
}
`;

exports[`Options Reducer should set empty space 1`] = `
Object {
  "bedrockIdentifier": "crafting:recipe",
  "emptySpace": false,
  "minecraftVersion": 1.16,
  "outputRecipe": "crafting_recipe",
  "shape": "shaped",
  "tab": "crafting",
}
`;

exports[`Options Reducer should set output recipe 1`] = `
Object {
  "bedrockIdentifier": "crafting:recipe",
  "emptySpace": true,
  "minecraftVersion": 1.16,
  "outputRecipe": "acacia_boat",
  "shape": "shaped",
  "tab": "crafting",
}
`;

exports[`Options Reducer should set shape 1`] = `
Object {
  "bedrockIdentifier": "crafting:recipe",
  "emptySpace": true,
  "minecraftVersion": 1.16,
  "outputRecipe": "crafting_recipe",
  "shape": "shapeless",
  "tab": "crafting",
}
`;
